themes/hugo-xmin/static/css/style.css
:root {
  --bg: linear-gradient(150deg, rgba(240, 255, 0, 1) 5%, rgba(252, 219, 69, 1) 20%, rgba(252, 176, 69, 1) 50%, rgba(253, 29, 29, 1) 100%);
  --text: black;
  --hr-color: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --menu-background: linear-gradient(-60deg, rgba(252, 176, 69, 1) 0%, rgba(0, 225, 255, 1) 60%);
  --footer-color: rgba(70,70,70,1);
  --h1-color: linear-gradient(90deg,rgba(221, 27, 224, 1) 30%, rgba(29, 74, 253, 1) 70%);
  --h2-background: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --link-color-text: blue;
  --link-color-hover: #FB00FF;
  --code-background: rgba(0, 225, 255, 1);
  --code-color: black;
}

/* Colours theme -- same as the default settings */
body.theme1 {
  --bg: linear-gradient(150deg, rgba(240, 255, 0, 1) 5%, rgba(252, 219, 69, 1) 20%, rgba(252, 176, 69, 1) 50%, rgba(253, 29, 29, 1) 100%);
  --text: black;
  --hr-color: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --menu-background: linear-gradient(-60deg, rgba(252, 176, 69, 1) 0%, rgba(0, 225, 255, 1) 60%);
  --footer-color: rgba(70,70,70,1);
  --h1-color: linear-gradient(90deg,rgba(221, 27, 224, 1) 30%, rgba(29, 74, 253, 1) 70%);
  --h2-background: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --link-color-text: blue;
  --link-color-hover: #FB00FF;
  --code-background: rgba(0, 225, 255, 1);
  --code-color: black;
}

/* Dark theme */
body.theme2 {
  --bg: linear-gradient(-30deg, rgba(55, 0, 90, 1) 20%, rgba(0, 10, 87, 1) 50%, rgba(0, 0, 0, 1) 90%);
  --text: rgba(230, 230, 230, 1);
  --link-color-text: rgba(253, 29, 29, 1);
  --hr-color: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --menu-background: linear-gradient(-60deg, rgba(252, 176, 69, 1) 0%, rgba(0, 225, 255, 1) 60%);
  --footer-color: #999;
  --h1-color: linear-gradient(90deg,rgba(221, 27, 224, 1) 30%, rgba(29, 74, 253, 1) 70%);
  --h2-background: linear-gradient(90deg, rgba(251, 0, 255, 1) 20%, rgba(0, 225, 255, 1) 80%);
  --link-color-text: rgba(253, 29, 29, 1);
  --link-color-hover: #FB00FF;
  --code-background: rgba(0, 225, 255, 1);
  --code-color: black;
}

/* Plain light theme */
body.theme3 {
  --bg: white;
  --text: black;
  --hr-color: #eee;
  --menu-background: #eee;
  --footer-color: #999;
  --h1-color: black;
  --h2-background: #eee;
  --link-color-text: #1527AC;
  --link-color-hover: #FB00FF;
  --code-background: #f9f9f9; 
  --code-color: #1527AC;
}

body {
  max-width: 800px;
  margin: auto;
  padding: 1em;
  line-height: 1.5em;
  background: var(--bg);
  color: var(--text);
} 

/* header and footer areas */
.menu { padding: 0; }
.menu li { display: inline-block; }
.article-meta, .menu a {
  text-decoration: none;
  background: var(--menu-background);
  padding: 7px;
  border-radius: 5px;
}
.menu, .article-meta, footer { text-align: center; }
.title { font-size: 1.1em; }
footer a { text-decoration: none; }
footer { 
  color: var(--footer-color);
}
hr {
  border: none;
  height: 3px;
  background: var(--hr-color);
  border-radius: 5px;
}

/* By default, color in CSS can't take a gradient, but background-clip: text does the trick */
h1 {
  margin-top: 0.3%;
  margin-bottom: 0%;
  line-height: 1.2; /* so that the g isn't clipped by background-clip */
  display: inline-block; /* shrink to text width */
  background: var(--h1-color);
  -webkit-background-clip: text;  /* Safari/Chrome */
  -webkit-text-fill-color: transparent; /* Safari/Chrome */
  background-clip: text; /* Standard (not supported in Firefox yet without prefix) */
  color: black; /* fallback */
}


/* h2 header (i.e. ## in markdown) */
h2 {
  color: black;
  text-decoration: none;
  background: var(--h2-background);
  padding: 10px;
  border-radius: 5px;
}

/* Link colours */
a:link {color:var(--link-color-text); text-decoration: none}    
a:visited {color:var(--link-color-text);}  /* same colour as before visiting */
a:hover {color:var(--link-color-hover); text-decoration: underline} /* visited link is black (reverse the color back to black)*/

/* code */
pre {
  border: 1px solid #ddd;
  box-shadow: 5px 5px 5px #eee;
  padding: 1em;
  overflow-x: auto;
}
code { 
  color: var(--code-color);
  background: var(--code-background);
}
pre code { background: none; }

/* misc elements */
img, iframe, video { max-width: 100%; }
main { hyphens: auto; }
blockquote {
  background: #f9f9f9;
  border-left: 5px solid #ccc;
  padding: 3px 1em 3px;
}

table {
  margin: auto;
  border-top: 1px solid #666;
  border-bottom: 1px solid #666;
}
table thead th { border-bottom: 1px solid #ddd; }
th, td { padding: 5px; }
thead, tfoot, tr:nth-child(even) { background: #eee }


#lmb-logo {
  /* max-height:80px; */
  /* max-width: 40%; */
  width: 30%;
  float:right;
  margin-left:0%;
  margin-right:0%;
  margin-bottom:0%; 
  margin-top: -2.85% 
  /* margin-top: 0%  */
}

#my-photo {
  width: 19%;
  float: left;
  margin-top: 0%;
  margin-bottom: 0%;
  margin-left: 0%;
  margin-right: 4%;
  border-radius: 5%;
}

@media (max-width: 600px) {
  #my-photo {
    /* // Override width to show only one image in a row on smaller screens */
    width: 30%;
    margin-top: 0%;
    margin-bottom: 3%;
    margin-left: 32%;
    margin-right: 32%;
    border-radius:5%;
  }

  #lmb-logo {
    /* // Override width to show only one image in a row on smaller screens */
    width: 40%;
    margin-top: 0%;
    margin-bottom: 3%;
    margin-left: 31%;
    margin-right: 29%;
    border-radius:5%;
  }
}


/* Make the theme switcher look like plain text */
.theme-button {
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  color: var(--link-color-text);  /* your theme link color */
  cursor: pointer;
  text-decoration: underline; /* optional, like a link */
}

.theme-button:hover {
  color: var(--link-color-hover, blue);
  text-decoration: underline;
}

